--- a/src/app/classroom/students/components/student-card/student-card.component.scss
+++ b/src/app/classroom/students/components/student-card/student-card.component.scss
@@ -2,6 +2,14 @@ mat-card {
 
   &:focus {
     outline: -webkit-focus-ring-color auto 0;
+  }  
+
+  button {
+    opacity: .8;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 }
 
