Edit student from studentList

--- a/src/app/classroom/students/components/student-card/student-card.component.html
+++ b/src/app/classroom/students/components/student-card/student-card.component.html
@@ -20,10 +20,19 @@
       </div>
     </div>
 
-    <!-- Fav button -->
-    <button class="mr-h ml-h" mat-icon-button (click)="fav($event); $event.stopPropagation()">
-      <fa-icon [ngClass]="{'star-active': student?.favorite}" class="mat-icon-20 mat-hint" icon="star"></fa-icon>
-    </button>
+    <!-- Action button -->
+    <div class="action-buttons" fxFlex="nogrow" fxLayout="row" fxLayoutAlign="space-between center">
+
+      <!-- Fav button -->
+      <button mat-icon-button (click)="editStudent($event); $event.stopPropagation()">
+        <fa-icon class="mat-icon-18 mat-hint" icon="pen"></fa-icon>
+      </button>
+
+      <!-- Fav button -->
+      <button mat-icon-button (click)="fav($event); $event.stopPropagation()">
+        <fa-icon [ngClass]="{'star-active': student?.favorite}" class="mat-icon-18 mat-hint" icon="star"></fa-icon>
+      </button>
+    </div>
 
   </div>
 </mat-card>
