--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -3,7 +3,7 @@
   <h2 class="m-0" mat-dialog-title>{{(data.idStudent ? 'EDIT_STUDENT' : 'ADD_STUDENT') | translate}}</h2>
 
   <!-- Cloase dialog button -->
-  <button class="button-close" mat-icon-button mat-dialog-close attr.aria-label="{{'CANCEL' | translate}}">
+  <button class="button-close" mat-icon-button attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">
     <fa-icon class="mat-icon-22 mat-hint" icon="times"></fa-icon>
   </button>
 </div>
@@ -14,31 +14,26 @@
 
     <!-- STUDENT -->
     <h3 class="mat-h2 mat-hint">{{'STUDENT_PERSONAL_DATA' | translate}}</h3>
-    <div formGroupName="personalFormGroup" class="mb-2 f-wrap" fxLayout="row" fxLayout.xs="column"
-      fxLayoutAlign="start center">
+    <div formGroupName="personalFormGroup" class="mb-2 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="start center">
 
       <!-- Avatar -->
-      <a13-pickup-image ngClass.xs="full-avatar mb-1 pb-h" class="avatar-selected" [(image)]="studentAvatar"
-        [imageList]="avatars" fxFlex="nogrow">
+      <a13-pickup-image ngClass.xs="full-avatar mb-1 pb-h" class="avatar-selected" [(image)]="studentAvatar" [imageList]="avatars" fxFlex="nogrow">
       </a13-pickup-image>
 
-      <div class="f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxFlex
-        ngClass.xs="full">
+      <div class="f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxFlex ngClass.xs="full">
 
         <!-- Name -->
         <mat-form-field appearance="outline" fxFlex="100">
           <mat-label>{{'FORM.NAME' | translate}}{{'AND' | translate}} {{'FORM.SURNAME' | translate | lowercase}}
           </mat-label>
-          <input matInput required formControlName="nameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}"
-            autocomplete="off">
+          <input matInput required formControlName="nameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}" autocomplete="off">
           <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="font"></fa-icon>
         </mat-form-field>
 
         <!-- Birthdate -->
         <mat-form-field class="mb-1" appearance="outline" fxFlex="50">
           <mat-label>{{'FORM.BIRTHDATE' | translate}}</mat-label>
-          <input class="pl-h" matInput formControlName="birthdateCtrl" [matDatepicker]="birthdatePicker"
-            [max]="maxDate">
+          <input class="pl-h" matInput formControlName="birthdateCtrl" [matDatepicker]="birthdatePicker" [max]="maxDate">
           <mat-datepicker #birthdatePicker></mat-datepicker>
           <mat-datepicker-toggle class="mat-hint" matPrefix [for]="birthdatePicker">
           </mat-datepicker-toggle>
@@ -48,8 +43,7 @@
         <!-- Academic course -->
         <mat-form-field class="mb-1" appearance="outline" fxFlex="50">
           <mat-label>{{'FORM.ACADEMIC_COURSE' | translate}}</mat-label>
-          <mat-select formControlName="academicCourseCtrl" [compareWith]="equals"
-            attr.aria-label="{{'FORM.ACADEMIC_COURSE' | translate}}">
+          <mat-select formControlName="academicCourseCtrl" [compareWith]="equals" attr.aria-label="{{'FORM.ACADEMIC_COURSE' | translate}}">
             <mat-option>-- {{'NONE' | translate}} --</mat-option>
             <mat-optgroup *ngFor="let group of academicCourses" [label]="group.name | translate">
               <mat-option *ngFor="let course of group.group" [value]="course">
@@ -76,30 +70,26 @@
 
       <!-- Phones -->
       <div class="phone-list" *ngIf="arrayPhones.controls" formArrayName="phonesFormArray">
-        <div *ngFor="let phone of arrayPhones.controls; let i = index" fxLayout="row"
-          fxLayoutAlign="space-between center">
+        <div *ngFor="let phone of arrayPhones.controls; let i = index" fxLayout="row" fxLayoutAlign="space-between center">
 
           <ng-container formGroupName="{{i}}">
 
             <!-- Name -->
             <mat-form-field fxFlex="45" appearance="outline">
               <mat-label>{{'FORM.NAME' | translate}}</mat-label>
-              <input matInput formControlName="contactPhoneNameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}"
-                maxlength="20" autocomplete="off">
+              <input matInput formControlName="contactPhoneNameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}" maxlength="20" autocomplete="off">
               <!-- <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="user"></fa-icon> -->
             </mat-form-field>
 
             <!-- Phone -->
             <mat-form-field fxFlex="45" appearance="outline">
               <mat-label>{{'FORM.PHONE' | translate}}</mat-label>
-              <input matInput formControlName="contactPhoneNumberCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}"
-                autocomplete="off">
+              <input matInput formControlName="contactPhoneNumberCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}" autocomplete="off">
               <!-- <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="phone-alt"></fa-icon> -->
             </mat-form-field>
 
             <!-- Delete phone -->
-            <button mat-icon-button color="warn" class="mb-1" attr.aria-label="{{'DELETE' | translate}}"
-              (click)="removePhone(i)">
+            <button mat-icon-button color="warn" class="mb-1" attr.aria-label="{{'DELETE' | translate}}" (click)="removePhone(i)">
               <fa-icon class="mat-icon-18" icon="trash"></fa-icon>
             </button>
           </ng-container>
@@ -108,8 +98,7 @@
 
       <!-- New phone -->
       <div class="pl-q pr-q" fxLayout="row" fxLayoutAlign="end center">
-        <button class="button-text-icon" mat-stroked-button attr.arial-label="{{'DELETE' | translate}}"
-          (click)="addPhone(null, true)" [disabled]="arrayPhones.invalid">
+        <button class="button-text-icon" mat-stroked-button attr.arial-label="{{'DELETE' | translate}}" (click)="addPhone(null, true)" [disabled]="arrayPhones.invalid">
           <span class="text-button mat-hint mr-1">{{'HINT.ADD_NEW_PHONE' | translate}}</span>
           <fa-icon class="mat-icon-18" icon="plus"></fa-icon>
         </button>
@@ -118,14 +107,12 @@
 
     <!-- MUSICAL -->
     <h3 class="mat-h2 mat-hint">{{'STUDENT_CONSERVATORY_DATA' | translate}}</h3>
-    <div formGroupName="musicalFormGroup" class="mb-H mt-1 f-wrap" fxLayout="row" fxLayout.xs="column"
-      fxLayoutAlign="space-between center">
+    <div formGroupName="musicalFormGroup" class="mb-H mt-1 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
 
       <!-- Conservatory course -->
       <mat-form-field appearance="outline" fxFlex="50">
         <mat-label>{{'FORM.CONSERVATORY_COURSE' | translate}}</mat-label>
-        <mat-select formControlName="courseCtrl" [compareWith]="equals"
-          attr.aria-label="{{'FORM.CONSERVATORY_COURSE' | translate}}">
+        <mat-select formControlName="courseCtrl" [compareWith]="equals" attr.aria-label="{{'FORM.CONSERVATORY_COURSE' | translate}}">
           <mat-option>-- {{'NONE' | translate}} --</mat-option>
           <mat-optgroup *ngFor="let group of conservatoryCourses" [label]="group.name | translate">
             <mat-option *ngFor="let course of group.group" [value]="course">
@@ -139,16 +126,14 @@
       <!-- Teacher-->
       <mat-form-field appearance="outline" fxFlex="50">
         <mat-label>{{'FORM.CONSERVATORY_TEACHER' | translate}}</mat-label>
-        <input matInput formControlName="teacherCtrl" attr.aria-label="{{'FORM.CONSERVATORY_TEACHER' | translate}}"
-          autocomplete="off">
+        <input matInput formControlName="teacherCtrl" attr.aria-label="{{'FORM.CONSERVATORY_TEACHER' | translate}}" autocomplete="off">
         <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="chalkboard-teacher"></fa-icon>
       </mat-form-field>
 
       <!-- Instrument -->
       <mat-form-field appearance="outline" fxFlex="100">
         <mat-label>{{'FORM.INSTRUMENT' | translate}}</mat-label>
-        <mat-select formControlName="instrumentCtrl" [compareWith]="equals"
-          attr.aria-label="{{'FORM.INSTRUMENT' | translate}}">
+        <mat-select formControlName="instrumentCtrl" [compareWith]="equals" attr.aria-label="{{'FORM.INSTRUMENT' | translate}}">
           <mat-option>-- {{'NONE' | translate}} --</mat-option>
           <mat-optgroup *ngFor="let group of instruments" [label]="group.name | translate">
             <mat-option *ngFor="let instrument of group.group" [value]="instrument">
@@ -163,8 +148,7 @@
 
     <!-- CLASSROOM -->
     <h3 class="mat-h2 mat-hint">{{'CLASSROOM.NAME' | translate}}</h3>
-    <div formGroupName="classroomFormGroup" class="mb-H mt-1 f-wrap" fxLayout="row" fxLayout.xs="column"
-      fxLayoutAlign="space-between center">
+    <div formGroupName="classroomFormGroup" class="mb-H mt-1 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
 
       <!-- Classroom -->
       <mat-form-field class="mb-1" appearance="outline" fxFlex="50">
@@ -181,8 +165,7 @@
       <!-- Subjects -->
       <mat-form-field class="mb-1" appearance="outline" fxFlex="50">
         <mat-label>{{'FORM.SUBJECTS' | translate}}</mat-label>
-        <mat-select formControlName="subjectsCtrl" multiple
-          attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
+        <mat-select formControlName="subjectsCtrl" multiple attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
           <mat-option *ngFor="let subject of subjectList" [value]="subject.id">
             {{subject.name}}
           </mat-option>
@@ -196,8 +179,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button color="warn" mat-dialog-close
-    attr.aria-label="{{'CANCEL' | translate}}">{{'CANCEL' | translate}}</button>
-  <button class="ml-h" mat-flat-button color="primary" mat-dialog-close [disabled]="studentFormGroup.invalid"
-    (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{'SAVE' | translate}}</button>
+  <button mat-button color="warn" (click)="cancel()" attr.aria-label="{{'CANCEL' | translate}}">{{'CANCEL' | translate}}</button>
+  <button class="ml-h" mat-flat-button color="primary" mat-dialog-close [disabled]="studentFormGroup.invalid" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{'SAVE' | translate}}</button>
 </mat-dialog-actions>
