--- a/src/app/shared/components/day-card/day-card.component.html
+++ b/src/app/shared/components/day-card/day-card.component.html
@@ -30,10 +30,10 @@
 
     <!-- Action button -->
     <div class="action-buttons" fxFlex="nogrow" fxLayout="row" fxLayoutAlign="space-between center">
-      <button mat-icon-button (click)="editDay($event); $event.stopPropagation()">
+      <button mat-icon-button (click)="editDay($event)">
         <fa-icon class="mat-icon-18 mat-hint" icon="pen"></fa-icon>
       </button>
-      <button mat-icon-button (click)="deleteDay($event); $event.stopPropagation()">
+      <button mat-icon-button (click)="deleteDay($event)">
         <fa-icon class="mat-icon-18 mat-hint" icon="trash"></fa-icon>
       </button>
     </div>
