--- a/src/app/classroom/daily/components/day-list/day-list.component.html
+++ b/src/app/classroom/daily/components/day-list/day-list.component.html
@@ -4,14 +4,48 @@
     <!-- Filter -->
     <mat-form-field appearance="outline">
       <mat-label>{{'SEARCH_DAY' | translate}}</mat-label>
-      <input matInput [(ngModel)]="dayFilter" (ngModelChange)="searchDay($event)" attr.aria-label="{{'SEARCH_DAY' | translate}}" autocomplete="off">
+      <input matInput [(ngModel)]="dayFilter" (ngModelChange)="filterList()" attr.aria-label="{{'SEARCH_DAY' | translate}}" autocomplete="off">
       <fa-icon *ngIf="!dayFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
       <button class="reset-button" mat-button matSuffix *ngIf="dayFilter" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
         <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
       </button>
     </mat-form-field>
 
-    <!-- Days -->
+    <!-- Dates -->
+    <div class="f-wrap mb-2" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+
+      <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
+        <mat-label>{{'FORM.SINCE' | translate}}</mat-label>
+        <input class="pl-h" matInput [matDatepicker]="dateSincePicker" [(ngModel)]="dateSince" (ngModelChange)="filterList()" [max]="dateUntil">
+        <mat-datepicker #dateSincePicker></mat-datepicker>
+        <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateSincePicker">
+        </mat-datepicker-toggle>
+        <mat-hint align="start">{{'HINT.BIRTHDATE' | translate}}</mat-hint>
+      </mat-form-field>
+
+      <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
+        <mat-label>{{'FORM.UNTIL' | translate}}</mat-label>
+        <input class="pl-h" matInput [matDatepicker]="dateUntilPicker" [(ngModel)]="dateUntil" (ngModelChange)="filterList()" [min]="dateSince">
+        <mat-datepicker #dateUntilPicker></mat-datepicker>
+        <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateUntilPicker">
+        </mat-datepicker-toggle>
+      </mat-form-field>
+
+      <!-- Select quick date -->
+      <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
+        <mat-label>{{'FORM.SELECT_DATE' | translate}}</mat-label>
+        <mat-select attr.aria-label="{{'FORM.SELECT_DATE' | translate}}" [(ngModel)]="quickDate" (ngModelChange)="selectQuickDate()">
+          <mat-option>-- {{'NONE' | translate}} --</mat-option>
+          <mat-option *ngFor="let date of quickDates" [value]="date">
+            {{date.name | translate}}
+          </mat-option>
+        </mat-select>
+        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="calendar"></fa-icon>
+      </mat-form-field>
+
+    </div>
+
+    <!-- Days  | filterBy:dayFilter | dateFilter : dateSince : dateUntil"-->
     <ng-container *ngFor="let day of dayListFiltered">
       <a13-day-card [(day)]="day"></a13-day-card>
     </ng-container>
@@ -21,7 +55,7 @@
 
     <!-- List length > 0 -->
     <h3 *ngIf="dayListFiltered?.length" class="mt-3 txt-center mat-hint">{{'No hay más elementos' | translate}}</h3>
-    
+
     <!-- Floating button -->
     <a13-floating-button text="DAY.ADD" icon="edit" (click)="createDay()"></a13-floating-button>
   </div>
