--- a/src/app/classroom/daily/components/day-list/day-list.component.html
+++ b/src/app/classroom/daily/components/day-list/day-list.component.html
@@ -1,4 +1,4 @@
-<section class="container container-padd" a13Scrollable>
+<section class="container container-padd">
   <div class="container-max sm">
 
     <!-- Filter -->
@@ -11,45 +11,58 @@
       </button>
     </mat-form-field>
 
-    <!-- Dates -->
-    <div class="f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+    <!-- Advanced filters -->
+    <div fxLayout="row" class="mb-1">
+      <span fxFlex></span>
 
-      <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
-        <mat-label>{{'FORM.SINCE' | translate}}</mat-label>
-        <input class="pl-h" matInput [matDatepicker]="dateSincePicker" [(ngModel)]="dateSince" (ngModelChange)="filterList()" [max]="dateUntil">
-        <mat-datepicker #dateSincePicker></mat-datepicker>
-        <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateSincePicker">
-        </mat-datepicker-toggle>
-        <mat-hint align="start">{{'HINT.BIRTHDATE' | translate}}</mat-hint>
-      </mat-form-field>
-
-      <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
-        <mat-label>{{'FORM.UNTIL' | translate}}</mat-label>
-        <input class="pl-h" matInput [matDatepicker]="dateUntilPicker" [(ngModel)]="dateUntil" (ngModelChange)="filterList()" [min]="dateSince">
-        <mat-datepicker #dateUntilPicker></mat-datepicker>
-        <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateUntilPicker">
-        </mat-datepicker-toggle>
-      </mat-form-field>
-
-      <!-- Select quick date -->
-      <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
-        <mat-label>{{'FORM.SELECT_DATE' | translate}}</mat-label>
-        <mat-select attr.aria-label="{{'FORM.SELECT_DATE' | translate}}" [(ngModel)]="quickDate" (ngModelChange)="selectQuickDate()">
-          <mat-option>-- {{'NONE' | translate}} --</mat-option>
-          <mat-option *ngFor="let date of quickDates" [value]="date">
-            {{date.name | translate}}
-          </mat-option>
-        </mat-select>
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-h" icon="calendar"></fa-icon>
-      </mat-form-field>
-
+      <a class="link mat-small pointer" (click)="showMore()">
+        {{'ADVANCED_FILTERS' | translate}}
+        <fa-icon class="ml-q mat-icon-14" [icon]="moreInfoConfig.icon"></fa-icon>
+      </a>
     </div>
 
-    <div class="mb-2" fxLayout="row" fxLayoutAlign="end center">
-      <fa-icon class="mat-icon-20 mat-hint pr-1" icon="box" [ngClass]="{'archived': showArchived}"></fa-icon>
-      <mat-slide-toggle labelPosition="before" (change)="filterList()" [(ngModel)]="showArchived">
-        {{'FORM.SHOW_ARCHIVED' | translate}}
-      </mat-slide-toggle>
+    <div *ngIf="moreInfoConfig.show" class="mt-1">
+
+      <!-- Dates -->
+      <div class="f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+
+        <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
+          <mat-label>{{'FORM.SINCE' | translate}}</mat-label>
+          <input class="pl-h" matInput [matDatepicker]="dateSincePicker" [(ngModel)]="dateSince" (ngModelChange)="filterList()" [max]="dateUntil">
+          <mat-datepicker #dateSincePicker></mat-datepicker>
+          <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateSincePicker">
+          </mat-datepicker-toggle>
+          <mat-hint align="start">{{'HINT.BIRTHDATE' | translate}}</mat-hint>
+        </mat-form-field>
+
+        <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
+          <mat-label>{{'FORM.UNTIL' | translate}}</mat-label>
+          <input class="pl-h" matInput [matDatepicker]="dateUntilPicker" [(ngModel)]="dateUntil" (ngModelChange)="filterList()" [min]="dateSince">
+          <mat-datepicker #dateUntilPicker></mat-datepicker>
+          <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateUntilPicker">
+          </mat-datepicker-toggle>
+        </mat-form-field>
+
+        <!-- Select quick date -->
+        <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
+          <mat-label>{{'FORM.SELECT_DATE' | translate}}</mat-label>
+          <mat-select attr.aria-label="{{'FORM.SELECT_DATE' | translate}}" [(ngModel)]="quickDate" (ngModelChange)="selectQuickDate()">
+            <mat-option>-- {{'NONE' | translate}} --</mat-option>
+            <mat-option *ngFor="let date of quickDates" [value]="date">
+              {{date.name | translate}}
+            </mat-option>
+          </mat-select>
+          <fa-icon matPrefix class="mat-icon-20 mat-hint pr-h" icon="calendar"></fa-icon>
+        </mat-form-field>
+
+      </div>
+
+      <div class="mt-h mb-3" fxLayout="row" fxLayoutAlign="end center">
+        <fa-icon class="mat-icon-20 mat-hint pr-1" icon="box" [ngClass]="{'archived': showArchived}"></fa-icon>
+        <mat-slide-toggle labelPosition="before" (change)="filterList()" [(ngModel)]="showArchived">
+          {{'FORM.SHOW_ARCHIVED' | translate}}
+        </mat-slide-toggle>
+      </div>
     </div>
 
     <!-- Days  | filterBy:dayFilter | dateFilter : dateSince : dateUntil"-->
