--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -62,8 +62,7 @@
         </div>
 
         <!-- Badges -->
-        <div *ngIf="student?.classroom?.classrooms?.length || student?.classroom?.subjects?.length" class="mt-q mb-q"
-          fxLayout="row wrap" fxLayoutAlign="start center">
+        <div *ngIf="student?.classroom?.classrooms?.length || student?.classroom?.subjects?.length" class="mt-q mb-q" fxLayout="row wrap" fxLayoutAlign="start center">
 
           <!-- Classrooms -->
           <div class="badge" *ngFor="let classroom of student?.classroom.classrooms; let i=index; let first = first">
@@ -72,8 +71,7 @@
           </div>
 
           <!-- Subjects -->
-          <div class="badge badge-stroked"
-            *ngFor="let subject of student?.classroom?.subjects; let i=index; let first = first">
+          <div class="badge badge-stroked" *ngFor="let subject of student?.classroom?.subjects; let i=index; let first = first">
             <fa-icon class="mat-icon-12 mr-q mat-hint" icon="book"></fa-icon>
             <span class="mat-hint">{{subject | subjectName}}</span>
           </div>
@@ -111,9 +109,12 @@
           <fa-icon class="mat-icon-20" icon="calendar-day"></fa-icon>
         </ng-template>
         <div class="padding-content">
-          <ng-container *ngFor="let day of dayList">
-            <a13-day-card [(day)]="day"></a13-day-card>
-          </ng-container>
+          <a13-day-filters [dayList]="dayList" [hideArchivedFilter]="true" (dayListFilter)="dayListFiltered = $event"></a13-day-filters>
+          <div class="mt-2">
+            <ng-container *ngFor="let day of dayListFiltered">
+              <a13-day-card [(day)]="day"></a13-day-card>
+            </ng-container>
+          </div>
           <a13-floating-button text="DAY.ADD" icon="edit" [disabled]="student?.archived" (click)="createDay()">
           </a13-floating-button>
         </div>
