--- a/src/app/shared/components/toast/toast.component.html
+++ b/src/app/shared/components/toast/toast.component.html
@@ -1,29 +1,30 @@
 <div class="toast">
 
-  <div [ngSwitch]="true" [ngClass]="data?.messageType" fxLayout="row" fxLayoutAlign="start center">
+  <div [ngSwitch]="true" [ngClass]="data?.type" fxLayout="row" fxLayoutAlign="start center">
 
     <!-- Icon -->
     <fa-icon class="mat-icon-18 mr-1" [icon]="data?.icon || 'info'"></fa-icon>
 
     <!-- Welcome -->
-    <span *ngSwitchCase="data?.messageType === 'welcome'" class="info">
-      {{ data?.message | translate:{'name': data?.name} }}
+    <span *ngSwitchCase="data?.type === 'welcome'" class="info">
+      {{ data?.text | translate:{'name': data?.name} }}
     </span>
 
     <!-- Types -->
-    <span *ngSwitchCase="case(data?.messageType)">
-      {{ data?.message | translate }}
+    <span *ngSwitchCase="case(data?.type)">
+      {{ data?.text | translate }}
     </span>
 
     <!-- Default -->
     <span *ngSwitchDefault fxLayout="row">
-      {{ data?.message | translate }}
+      {{ data?.text | translate }}
     </span>
 
     <!-- Spacer -->
     <span fxFlex></span>
 
-    <!-- OK button -->
-    <button mat-button (click)="close()">{{'OK' | translate}}</button>
+    <!-- buttons -->
+    <button *ngIf="!data?.navigate" mat-button (click)="close()">{{'OK' | translate}}</button>
+    <button *ngIf="data?.navigate" mat-button [routerLink]="data?.navigate?.route" (click)="close()">{{data?.navigate?.text | translate}}</button>
   </div>
 </div>
