--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -254,3 +254,8 @@ mat-form-field {
 .archived-student:hover {
   opacity: 1;
 }
+
+.mat-snack-bar-container {
+  max-width: 560px !important;
+  width: 100%;
+}
