--- a/src/app/shared/components/toast/toast.component.html
+++ b/src/app/shared/components/toast/toast.component.html
@@ -25,7 +25,7 @@
 
     <div fxFLex="nogrow">
       <!-- buttons -->
-      <button *ngIf="!data?.navigate && !data?.action" mat-flat-button (click)="close()">{{'OK' | translate}}</button>
+      <button *ngIf="!data?.navigate && !data?.action" mat-button (click)="close()">{{'OK' | translate}}</button>
       <button *ngIf="data?.navigate" mat-flat-button color="primary" [routerLink]="data?.navigate?.route" (click)="close()">{{data?.navigate?.text | translate}}</button>
       <button *ngIf="data?.action" mat-flat-button color="accent" (click)="data?.action?.f(); snackRef.dismiss()">{{data?.action?.text | translate}}</button>
     </div>
