--- a/src/app/classroom/components/classroom/classroom.component.scss
+++ b/src/app/classroom/components/classroom/classroom.component.scss
@@ -1,10 +1,14 @@
+mat-sidenav-container.sidenav-container {
+  height: calc(var(--vh, 1vh) * 100 - var(--main-header-size));
+}
+
 mat-sidenav.sidenav {
   min-width: var(--main-sidemenu-size);
   max-width: var(--main-sidemenu-size);
 }
 
 #main-content-container {
-  height: 100vh;
+  height: 100%;
 }
 
 .main-content {
