--- a/src/app/classroom/components/side-menu/side-menu.component.scss
+++ b/src/app/classroom/components/side-menu/side-menu.component.scss
@@ -1,6 +1,10 @@
+.sidenav-container {
+  height: calc(var(--vh, 1vh) * 100);
+}
+
 .side-menu-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
   .title-logo {
     height: 80px;
