--- a/src/app/classroom/students/components/student-list/student-list.component.html
+++ b/src/app/classroom/students/components/student-list/student-list.component.html
@@ -1,68 +1,56 @@
 <section class="container container-padd">
   <div class="container-max sm">
 
-    <!-- Filter -->
-    <mat-form-field appearance="outline">
-      <mat-label>{{'SEARCH_STUDENT' | translate}}</mat-label>
-      <input matInput [(ngModel)]="studentFilter" (ngModelChange)="searchStudent($event)"
-        attr.aria-label="{{'SEARCH_STUDENT' | translate}}" autocomplete="off">
-      <fa-icon *ngIf="!studentFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
-      <button class="reset-button" mat-button matSuffix *ngIf="studentFilter" mat-icon-button
-        attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
-        <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
-      </button>
-    </mat-form-field>
+    <a13-student-filters [studentList]="studentList" (studentListFilter)="studentListFiltered = $event"></a13-student-filters>
 
     <!-- Students list-->
-    <div class="pb-5" *ngIf="studentListFiltered.length">
+    <div class="pb-5 mt-2" *ngIf="studentListFiltered?.length">
 
       <!-- Favorites -->
-      <div *ngIf="favoriteListFiltered.length>0">
+      <div class="mb-1">
         <button mat-button color="primary" (click)="showMore('favorite')">
           {{toggleConfig.favorite.text | translate}}
-          <span class="translucide"> | {{favoriteListFiltered.length}}</span>
+          <span class="translucide"> | {{(studentListFiltered | agroupBy: 'favorite').length}}</span>
           <fa-icon class="ml-q mat-icon-14" [icon]="toggleConfig.favorite.icon"></fa-icon>
         </button>
-      </div>
-      <ng-container *ngIf="toggleConfig.favorite.show">
-        <ng-container *ngFor="let student of favoriteListFiltered; let i = index">
-          <a13-student-card [(student)]="student"></a13-student-card>
+        <ng-container *ngIf="toggleConfig.favorite.show">
+          <ng-container *ngFor="let student of studentListFiltered | agroupBy: 'favorite'">
+            <a13-student-card [(student)]="student"></a13-student-card>
+          </ng-container>
         </ng-container>
-      </ng-container>
+      </div>
 
       <!-- Rest students -->
-      <div *ngIf="restListFiltered.length>0" [ngClass]="{'mt-1': favoriteListFiltered.length>0}">
+      <div class="mb-1">
         <button mat-button class="mat-hint" (click)="showMore('rest')">
           {{toggleConfig.rest.text | translate}}
-          <span class="translucide"> | {{restListFiltered.length}}</span>
+          <span class="translucide"> | {{(studentListFiltered | agroupBy).length}}</span>
           <fa-icon class="ml-q mat-icon-14" [icon]="toggleConfig.rest.icon"></fa-icon>
         </button>
-      </div>
-      <ng-container *ngIf="toggleConfig.rest.show">
-        <ng-container *ngFor="let student of restListFiltered; let i = index">
-          <a13-student-card [(student)]="student"></a13-student-card>
+        <ng-container *ngIf="toggleConfig.rest.show">
+          <ng-container *ngFor="let student of studentListFiltered | agroupBy">
+            <a13-student-card [(student)]="student"></a13-student-card>
+          </ng-container>
         </ng-container>
-      </ng-container>
+      </div>
 
       <!-- Archived students -->
-      <div *ngIf="archivedListFiltered.length>0"
-        [ngClass]="{'mt-1': favoriteListFiltered.length>0 || restListFiltered.length>0}">
+      <div class="mb-1">
         <button mat-button color="warn" (click)="showMore('archived')">
           {{toggleConfig.archived.text | translate}}
-          <span class="translucide"> | {{archivedListFiltered.length}}</span>
+          <span class="translucide"> | {{(studentListFiltered | agroupBy: 'archived').length}}</span>
           <fa-icon class="ml-q mat-icon-14" [icon]="toggleConfig.archived.icon"></fa-icon>
         </button>
-      </div>
-      <ng-container *ngIf="toggleConfig.archived.show">
-        <ng-container *ngFor="let student of archivedListFiltered; let i = index">
-          <a13-student-card [(student)]="student"></a13-student-card>
+        <ng-container *ngIf="toggleConfig.archived.show">
+          <ng-container *ngFor="let student of studentListFiltered | agroupBy: 'archived'">
+            <a13-student-card [(student)]="student"></a13-student-card>
+          </ng-container>
         </ng-container>
-      </ng-container>
-
+      </div>
     </div>
 
     <!-- Empty list -->
-    <h3 *ngIf="!studentListFiltered.length" class="txt-5 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}
+    <h3 *ngIf="!studentListFiltered?.length" class="txt-5 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}
     </h3>
 
     <!-- Floating button -->
