--- a/src/app/shared/components/day-filters/day-filters.component.html
+++ b/src/app/shared/components/day-filters/day-filters.component.html
@@ -25,7 +25,7 @@
      <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxLayoutGap="8px">
 
        <div class="dates" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="5px" fxFlex="66" fxFlex.xs="100">
-         <mat-form-field class="mb-1" appearance="outline" fxFlex="50">
+         <mat-form-field appearance="outline" fxFlex="50">
            <mat-label>{{'FORM.SINCE' | translate}}</mat-label>
            <input class="pl-h" matInput [matDatepicker]="dateSincePicker" [(ngModel)]="dateSince" (ngModelChange)="selectDate()" [max]="dateUntil">
            <mat-datepicker #dateSincePicker></mat-datepicker>
@@ -34,10 +34,9 @@
            <button class="reset-button" mat-button matSuffix *ngIf="dateSince" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetDate('dateSince')">
              <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
            </button>
-           <mat-hint align="start">{{'HINT.BIRTHDATE' | translate}}</mat-hint>
          </mat-form-field>
 
-         <mat-form-field class="mb-1" appearance="outline" fxFlex="50">
+         <mat-form-field appearance="outline" fxFlex="50">
            <mat-label>{{'FORM.UNTIL' | translate}}</mat-label>
            <input class="pl-h" matInput [matDatepicker]="dateUntilPicker" [(ngModel)]="dateUntil" (ngModelChange)="selectDate()" [min]="dateSince">
            <mat-datepicker #dateUntilPicker></mat-datepicker>
@@ -50,7 +49,7 @@
        </div>
 
        <!-- Select quick date -->
-       <mat-form-field class="mb-1" appearance="outline" fxFlex="33">
+       <mat-form-field appearance="outline" fxFlex="33">
          <mat-label>{{'FORM.CUSTOM_DATES' | translate}}</mat-label>
          <mat-select attr.aria-label="{{'FORM.CUSTOM_DATES' | translate}}" [(ngModel)]="quickDate" (ngModelChange)="selectQuickDate()">
            <mat-option *ngFor="let date of quickDates" [value]="date">
