Student query params filter

--- a/src/app/classroom/students/components/student-card/student-card.component.html
+++ b/src/app/classroom/students/components/student-card/student-card.component.html
@@ -5,7 +5,7 @@
     <div class="row mr-h ml-h" fxLayout="row" fxLayoutAlign="start center">
 
       <!-- Avatar -->
-      <img class="user-avatar-image mr-1" [src]="student?.personal?.avatar | srcImage" alt="Avatar">
+      <img class="aumente aumente-big user-avatar-image mr-1" [src]="student?.personal?.avatar | srcImage" alt="Avatar">
 
       <!-- Name & Surname -->
       <div fxLayout="column" fxLayoutAlign="space-around start">
