--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -25,7 +25,7 @@
       <mat-nav-list class="m-0 p-0 mb-1 overflow-scroll" *ngFor="let menu of menuItems; index as i">
         <div class="overflow-scroll-content nav-list">
           <ng-container *ngFor="let item of menu">
-            <a mat-list-item (click)="onItemSelected(item)" [ngClass]="{'active': item.expanded}">
+            <a mat-list-item (click)="onItemSelected($event, item)" [ngClass]="{'active': item.expanded}">
               <fa-icon class="mat-hint" [icon]="item.icon"></fa-icon>
               <span class="mat-hint pl-h ml-q mr-q">{{ item?.name | translate}}</span>
               <span class="translucide mat-hint"> | {{item?.children?.length}}</span>
@@ -36,10 +36,10 @@
             </a>
             <div *ngIf="item.expanded">
               <ng-container *ngFor="let child of item.children">
-                <a mat-list-item (click)="onItemSelected(child)" [ngClass]="{'expanded': child.expanded}">
+                <a mat-list-item (click)="onItemSelected($event, child)" [ngClass]="{'expanded': child.expanded}">
                   <span class="mat-hint pl-1 ml-1">{{child?.name}}</span>
                   <span fxFlex></span>
-                  <button mat-icon-button [matMenuTriggerFor]="menuOptionsId" attr.aria-label="{{'OPTION_MENU' | translate}}">
+                  <button mat-icon-button [matMenuTriggerFor]="menuOptionsId" attr.aria-label="{{'OPTION_MENU' | translate}}"(click)=$event.stopPropagation()>
                     <fa-icon class="mat-hint" icon="ellipsis-v"></fa-icon>
                   </button>
                 </a>
