--- a/src/app/shared/components/student-filters/student-filters.component.html
+++ b/src/app/shared/components/student-filters/student-filters.component.html
@@ -2,7 +2,7 @@
   <!-- Filter -->
   <mat-form-field appearance="outline">
     <mat-label>{{'SEARCH_STUDENT' | translate}}</mat-label>
-    <input matInput [(ngModel)]="studentFilter" (ngModelChange)="filterList()" attr.aria-label="{{'SEARCH_STUDENT' | translate}}" autocomplete="off">
+    <input matInput [(ngModel)]="studentFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_STUDENT' | translate}}" autocomplete="off">
     <fa-icon *ngIf="!studentFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
     <button class="reset-button" mat-button matSuffix *ngIf="studentFilter" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
       <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
@@ -14,7 +14,7 @@
     <!-- Classroom -->
     <mat-form-field appearance="outline" fxFlex="49">
       <mat-label>{{'CLASSROOMS' | translate}}</mat-label>
-      <mat-select multiple [(ngModel)]="classroomsFilter" (ngModelChange)="filterList()" attr.aria-label="{{'CLASSROOMS' | translate}}">
+      <mat-select multiple [(ngModel)]="classroomsFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'CLASSROOMS' | translate}}">
         <mat-option *ngFor="let classroom of classroomList" [value]="classroom.id">
           {{classroom.name}}
         </mat-option>
@@ -25,7 +25,7 @@
     <!-- Subjects -->
     <mat-form-field appearance="outline" fxFlex="49">
       <mat-label>{{'FORM.SUBJECTS' | translate}}</mat-label>
-      <mat-select multiple [(ngModel)]="subjectsFilter" (ngModelChange)="filterList()" attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
+      <mat-select multiple [(ngModel)]="subjectsFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
         <mat-option *ngFor="let subject of subjectList" [value]="subject.id">
           {{subject.name}}
         </mat-option>
